resolved prompt format errors

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -19,10 +19,16 @@
       }
     ]
   },
+  
   "migrations": [
     {
       "tag": "v1",
       "new_sqlite_classes": ["TravelPlannerAgent"]
     }
-  ]
+  ],
+  "observability": {
+    "logs": {
+      "enabled": true,
+    }
+  }
 }
